[tool.poetry]
name = "DST-NewsFeed"
version = "0.0.2"
description = "Showcase of a batch ETL pipeline on the API Times Wire of the NY Times."
authors = ["Mickael GASPAR <migatsar@gmail.com>"]
readme = "README.md"
packages = [{include = "dst_newsfeed"}]

[tool.poetry.dependencies]
python = "^3.10.10"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^23.3.0"
coverage = "^7.2.5"
flake8 = "^6.0.0"
ipython = "^8.13.2"
isort = "^5.12.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
safety = "^2.3.5"


[tool.poetry.group.config.dependencies]
python-dotenv = "^1.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.2.0"
myst-parser = "^1.0.0"


[tool.poetry.group.eda.dependencies]
jupyterlab = "^3.6.3"

[tool.poetry.group.data.dependencies]
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"


[tool.poetry.group.web.dependencies]
requests = "^2.29.0"

[tool.poetry.group.backend.dependencies]
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.group.frontend.dependencies]
streamlit = "^1.22.0"


[tool.poetry.group.dataops.dependencies]
schedule = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
